--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^17.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "vite": "^4.3.0",
     "vite-plugin-react": "^4.0.1",
     "yup": "^1.1.1"
   },
@@ -22,6 +21,7 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "json-server": "^0.17.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "vite": "^4.3.7"
   }
 }
