--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashboard-react-ts",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,10 +14,10 @@
     "react-dom": "^17.0.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "vite-plugin-react": "^4.0.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^4.0.0",
